--- a/404.html
+++ b/404.html
@@ -5,7 +5,7 @@
   </head>
   <body>
     <script>
-      window.location.href = "/";
+      window.location.href = "/WeatherAPI_react_vite_deploy";
     </script>
   </body>
 </html>
