Ajuste no deploy

--- a/public/404.html
+++ b/public/404.html
@@ -4,8 +4,8 @@
     <meta http-equiv="refresh" content="0; url=/" />
   </head>
   <body>
-    <!-- <script>
+    <script>
       window.location.href = "/WeatherAPI_react_vite_deploy";
-    </script> -->
+    </script>
   </body>
 </html>
